# Ainote

./: License  README.md
note/: CMakeLists.txt  app.rc  main.cpp  notemanager.cpp  notemanager.h  res.qrc
note/qml/: ColorDot.qml  Main.qml  ShadowButton.qml  StickyNote.qml
